# routes/routes.go
@@ -23,50 +23,64 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
     r.POST("/login", controller.Login)
 
     r.GET("/product", controller.GetAllProduct)
-    r.GET("/product/:id", controller.GetProductById)
+    
+    // productMiddlewareRoute := r.Group("/product")
+    // productMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
+    // productMiddlewareRoute.POST("/:id", controller.GetProductById)
+    r.GET("/product/:id",middlewares.JwtAuthMiddleware(), controller.GetProductById)
 
-    productMiddlewareRoute := r.Group("/product")
-    productMiddlewareRoute.Use(middlewares.JwtAdminMiddleware())
-    productMiddlewareRoute.POST("/", controller.CreateProduct)
-    productMiddlewareRoute.PATCH("/:id", controller.UpdateProduct)
-    productMiddlewareRoute.DELETE("/:id", controller.DeleteProduct)
+    productAuthMiddlewareRoute := r.Group("/product")
+    productAuthMiddlewareRoute.Use(middlewares.JwtAdminMiddleware())
+    productAuthMiddlewareRoute.POST("/", controller.CreateProduct)
+    productAuthMiddlewareRoute.PATCH("/:id", controller.UpdateProduct)
+    productAuthMiddlewareRoute.DELETE("/:id", controller.DeleteProduct)
 
     r.GET("/categories", controller.GetAllCategory)
     r.GET("/categories/:id", controller.GetCategoryByID)
     r.GET("/categories/:id/product", controller.GetProductByCategoryId)
     
-    ratingMiddlewareRoute := r.Group("/categories")
-    ratingMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
-    ratingMiddlewareRoute.POST("/", controller.CreateCategory)
-    ratingMiddlewareRoute.PATCH("/:id", controller.UpdateCategory)
-    ratingMiddlewareRoute.DELETE("/:id", controller.DeleteCategory)
+    categoryMiddlewareRoute := r.Group("/categories")
+    categoryMiddlewareRoute.Use(middlewares.JwtAdminMiddleware())
+    categoryMiddlewareRoute.POST("/", controller.CreateCategory)
+    categoryMiddlewareRoute.PATCH("/:id", controller.UpdateCategory)
+    categoryMiddlewareRoute.DELETE("/:id", controller.DeleteCategory)
     
-    r.GET("/order", controller.GetAllOrder)
-    r.GET("/order/:id", controller.GetOrderByID)
-
+    
     orderMiddlewareRoute := r.Group("/order")
     orderMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
+    orderMiddlewareRoute.GET("/order/:id", controller.GetOrderByID)
     orderMiddlewareRoute.POST("/", controller.CreateOrder)
-    orderMiddlewareRoute.PATCH("/:id", controller.UpdateOrder)
-    orderMiddlewareRoute.DELETE("/:id", controller.DeleteOrder)
+    
+    r.GET("/user/:id/order",middlewares.JwtAuthMiddleware(), controller.GetOrderByUserId)
 
-    r.GET("/order-item", controller.GetAllOrderItem)
-    r.GET("/order-item/:id", controller.GetOrderItemById)
-
+    orderAdminMiddlewareRoute := r.Group("/order")
+    orderAdminMiddlewareRoute.Use(middlewares.JwtAdminMiddleware())
+    orderAdminMiddlewareRoute.PATCH("/:id", controller.UpdateOrder)
+    orderAdminMiddlewareRoute.DELETE("/:id", controller.DeleteOrder)
+    orderAdminMiddlewareRoute.GET("/", controller.GetAllOrder)
+    
+    // orderitem berdasarkan oder id
+    
     orderItemMiddlewareRoute := r.Group("/order-item")
     orderItemMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
     orderItemMiddlewareRoute.POST("/", controller.CreateOrderItem)
     orderItemMiddlewareRoute.PATCH("/:id", controller.UpdateOrderItem)
     orderItemMiddlewareRoute.DELETE("/:id", controller.DeleteOrderItem)
+    orderItemMiddlewareRoute.GET("/order-item", controller.GetAllOrderItem)
+    orderItemMiddlewareRoute.GET("/order-item/:id", controller.GetOrderItemById)
+    orderItemMiddlewareRoute.GET("/order/:id/order-item", controller.GetOrderItemByOrderId)
     
-    r.GET("/review", controller.GetAllReview)
-    r.GET("/review/:id", controller.GetReviewById)
-
+    
+    // review berdasarkan product id
+    r.GET("/product/:id/review", controller.GetReviewByProductId)
+    
     reviewMiddlewareRoute := r.Group("/review")
     reviewMiddlewareRoute.Use(middlewares.JwtAuthMiddleware())
+    reviewMiddlewareRoute.GET("/review/:id", controller.GetReviewById)
     reviewMiddlewareRoute.POST("/", controller.CreateReview)
     reviewMiddlewareRoute.PATCH("/:id", controller.UpdateReview)
     reviewMiddlewareRoute.DELETE("/:id", controller.DeleteReview)
+    reviewMiddlewareRoute.GET("/review", controller.GetAllReview)
 
 
     r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
